--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="senha">Senha</string>
     <string name="cadastre_se">Cadastre-se</string>
     <string name="logar">Logar</string>
+    <string name="title_activity_empresa">EmpresaActivity</string>
 </resources>
