feat: Adicionar strings para social login e atualizar layout de autenticação
- Adicionadas novas strings ao arquivo `strings.xml` para:
    - "Continuar com Facebook"
    - "Continuar com Google"
    - "Ou conectar com Mídia Social"
    - "Esqueceu senha?"
    - "Receba seus remédios sem sair de casa!"
- Atualizado `activity_autenticacao.xml`:
    - Texto do título (`titleText`) agora usa a string `@string/receba_seus_rem_dios_sem_sair_de_casa`.
    - Imagem do logo (`logoImage`) alterada para `@drawable/logo` e dimensões ajustadas.
    - Link "Esqueceu senha?" (`forgotPasswordLink`) agora usa a string `@string/esqueceu_senha`.
    - Divisor social (`socialDivider`) agora usa a string `@string/ou_conectar_com_m_dia_social`.
    - Botão do Google (`googleButton`) agora usa a string `@string/continuar_com_google` e ícone `@drawable/icons8_google_36`.
    - Botão do Facebook (`facebookButton`) agora usa a string `@string/continuar_com_facebook` e adicionado `app:iconTint="@null"`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="cadastre_se">Cadastre-se</string>
     <string name="logar">Logar</string>
     <string name="title_activity_empresa">EmpresaActivity</string>
+    <string name="continuar_com_facebook">Continuar com Facebook</string>
+    <string name="continuar_com_google">Continuar com Google</string>
+    <string name="ou_conectar_com_m_dia_social">Ou conectar com Mídia Social</string>
+    <string name="esqueceu_senha">Esqueceu senha?</string>
+    <string name="receba_seus_rem_dios_sem_sair_de_casa">Receba seus remédios sem sair de casa!</string>
 </resources>
