Refatoração da tela de autenticação e ajustes de estilo
- **AutenticacaoActivity.java**:
    - Substituídos `TextInputEditText` por `EditText` padrão para os campos de email e senha.
- **activity_autenticacao.xml**:
    - Alterados `TextInputEditText` para `EditText` com background personalizado (`bg_edit_text`).
    - Ajustado tamanho e posicionamento do logo.
    - Adicionado `TextView` (taglineText) abaixo do logo.
    - Texto do link de cadastro alterado de "Cadastre-se" para "Registrar-se".
    - Texto do botão de acesso principal alterado para "Entrar com MedLife" e ícone atualizado para `baseline_login_24`.
    - Botão de acesso principal agora tem `backgroundTint` definido como `@color/blue_500`.
    - Botões de login com Google e Facebook alterados de `OutlinedButton` para `Button` padrão, com `backgroundTint` definidos para `@color/googleLogin` e `@color/color4` respectivamente.
- **strings.xml**:
    - Adicionadas novas strings: `registrar_se`, `entrar_com_medlife`, `sempre_que_precisar_estarei_l_medlife_cuidando_do_seu_bem_estar`.
- **themes.xml** e **values-night/themes.xml**:
    - Ajustadas cores primárias para `blue_500` e `blue_700`.
    - Definido `colorOnPrimary` como `white`.
    - Adicionado estilo para `TextInputLayout` (embora não utilizado diretamente no layout modificado, indica intenção de uso futuro ou em outras partes do app).
    - Itens de cor primária comentados foram descomentados (`colorOnPrimary`).
- Adicionado novo drawable: `baseline_login_24.xml`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="ou_conectar_com_m_dia_social">Ou conectar com Mídia Social</string>
     <string name="esqueceu_senha">Esqueceu senha?</string>
     <string name="receba_seus_rem_dios_sem_sair_de_casa">Receba seus remédios sem sair de casa!</string>
+    <string name="registrar_se">Registrar-se</string>
+    <string name="entrar_com_medlife">Entrar com MedLife</string>
+    <string name="sempre_que_precisar_estarei_l_medlife_cuidando_do_seu_bem_estar">Sempre que precisar estarei lá, MedLife cuidando do seu bem estar!</string>
 </resources>
