feat: Adiciona tela de registro de usuário
- Criada a `RegisterActivity.java` para o fluxo de cadastro de novos usuários.
    - Inclui campos para nome completo, e-mail e senha.
    - Adicionado um `CheckBox` para consentimento com os Termos de Serviço e Política de Privacidade.
    - Implementada a lógica de validação dos campos.
    - Utiliza o Firebase Authentication para criar novos usuários com e-mail e senha.
    - Atualiza o nome de exibição do usuário no Firebase após o cadastro.
    - Exibe mensagens de Toast para feedback ao usuário (sucesso, erros, campos obrigatórios).
    - Adicionado um link para redirecionar usuários existentes para a tela de login.
    - Redireciona para a `HomeActivity` após o cadastro bem-sucedido.
- Adicionadas novas strings em `strings.xml`:
    - `politica_de_privacidade`: Texto para o consentimento dos termos, com links estilizados.
    - `j_possui_conta`: Texto para o link de login, com link estilizado.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="registrar_se">Registrar-se</string>
     <string name="entrar_com_medlife">Entrar com MedLife</string>
     <string name="sempre_que_precisar_estarei_l_medlife_cuidando_do_seu_bem_estar">Sempre que precisar estarei lá, MedLife cuidando do seu bem estar!</string>
+    <string name="politica_de_privacidade">Ao continuar, você concorda com nosso <font fgcolor='#1E56A0'>Termos de Serviço</font> e <font fgcolor='#1E56A0'>Política de Privacidade</font></string>
+    <string name="j_possui_conta">Já possui conta? <font fgcolor='#1E56A0'>Entrar</font></string>
 </resources>
