feat: Implementação do Login com Google na tela de autenticação
- Adicionada dependência `play-services-auth` para o Google Sign In.
- Configurada a autenticação com Google na `AutenticacaoActivity`.
- Habilitada a funcionalidade de login com o botão do Google:
    - Iniciado o fluxo de login do Google.
    - Tratado o resultado da autenticação do Google.
    - Realizada a autenticação com o Firebase utilizando o token do Google.
    - Em caso de sucesso, o tipo de usuário é definido como "U" e o usuário é redirecionado para a tela principal.
    - Exibidas mensagens de erro mais detalhadas em caso de falha.
- Adicionado `default_web_client_id` em `strings.xml` para a configuração do Google Sign In.
- Removidos alguns TODOs e comentários relacionados à funcionalidade que foi implementada.

Alterações:
- app/build.gradle
- app/src/main/java/medlife/com/br/activity/AutenticacaoActivity.java
- app/src/main/res/values/strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="configura_es">Configurações</string>
     <string name="sair">Sair</string>
     <string name="favorito">Favorito</string>
+    <string name="default_web_client_id">727714709876-2hc54lir19914kb8qft75jkn4eom76jt.apps.googleusercontent.com</string>
 </resources>
