Refatorar: Usar lambdas para listeners e Objects.requireNonNull
- Em `AutenticacaoActivity.java`:
    - Substituídos os listeners anônimos por expressões lambda para `buttonAcessar`, `registerLink`, `forgotPasswordLink`, `googleButton` e `facebookButton`.
    - Adicionado `Objects.requireNonNull` ao ocultar a action bar e ao obter a mensagem de exceção no login com Google e e-mail/senha para evitar NullPointerExceptions.
- Em `fragment_home.xml`:
    - Textos "Bem-vindo(a)!" e "Home Screen Content" foram externalizados para `strings.xml`.
- Em `strings.xml`:
    - Adicionadas as strings `bem_vindo_a` e `home_screen_content`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="sair">Sair</string>
     <string name="favorito">Favorito</string>
     <string name="default_web_client_id">727714709876-2hc54lir19914kb8qft75jkn4eom76jt.apps.googleusercontent.com</string>
+    <string name="bem_vindo_a">Bem-vindo(a)!</string>
+    <string name="home_screen_content">Home Screen Content</string>
 </resources>
