feat: Add button_primary_bg.xml and update ProfileFragment
- Created `button_primary_bg.xml` drawable for a rectangular button with rounded corners and a specific blue background color (#1E56A0).
- In `ProfileFragment.java`, updated the `replaceFragment` method to use `R.id.contentFrame` instead of `R.id.frameLayout` for fragment transactions.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,8 @@
     <string name="notificacoes">Notificações</string>
     <string name="ajuda">Ajuda</string>
     <string name="sobre">Sobre</string>
+    <string name="carrinho_vazio">Seu carrinho está vazio</string>
+    <string name="adicione_produtos_ao_carrinho">Adicione produtos ao seu carrinho</string>
+    <string name="total">Total</string>
+    <string name="finalizar_compra">Finalizar Compra</string>
 </resources>
