feat: Implementar gerenciamento de endereços no perfil do usuário
- **ProfileAddressesFragment.java:**
    - Adicionado RecyclerView para exibir a lista de endereços.
    - Implementado AddressAdapter para popular o RecyclerView com os dados dos endereços.
    - Adicionado botão "Adicionar Endereço" que alterna a visibilidade de um formulário para adicionar novos endereços.
    - Implementada a lógica para adicionar, carregar e excluir endereços do Firebase Firestore.
    - Exibida mensagem "Nenhum endereço cadastrado" quando a lista estiver vazia.
    - Adicionada funcionalidade de editar e excluir endereços nos itens da lista (TODO para edição completa).
    - Limpeza dos campos do formulário após adicionar um endereço.
- **fragment_profile_addresses.xml:**
    - Reestruturado layout para incluir RecyclerView, formulário de adição de endereço (ScrollView) e botão para alternar a visibilidade do formulário.
    - Movido o RecyclerView para ocupar o espaço principal, com o formulário e o botão de alternância abaixo.
    - Adicionado TextView `textEmpty` para exibir quando não há endereços.
- **item_address.xml (novo):**
    - Criado layout para os itens da lista de endereços, exibindo informações do endereço e botões para editar e excluir.
- **ic_delete.xml (novo):**
    - Adicionado ícone de lixeira para o botão de excluir endereço.
- **strings.xml:**
    - Adicionadas novas strings para "Editar Endereço", "Excluir Endereço", "Ocultar Formulário" e "Adicionar Novo Endereço".

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,8 @@
     <string name="adicione_produtos_ao_carrinho">Adicione produtos ao seu carrinho</string>
     <string name="total">Total</string>
     <string name="finalizar_compra">Finalizar Compra</string>
+    <string name="editar_endere_o">Editar Endereço</string>
+    <string name="excluir_endere_o">Excluir Endereço</string>
+    <string name="ocultar_formul_rio">Ocultar Formulário</string>
+    <string name="adicionar_novo_endere_o">Adicionar Novo Endereço</string>
 </resources>
