--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="excluir_endere_o">Excluir Endereço</string>
     <string name="ocultar_formul_rio">Ocultar Formulário</string>
     <string name="adicionar_novo_endere_o">Adicionar Novo Endereço</string>
+    <string name="salvar_altera_es">Salvar Alterações</string>
 </resources>
